--- a/readme
+++ b/readme
@@ -1,8 +1,14 @@
 
 http://localhost:8080/batch/api/v1/
+http://localhost:8080/swagger-ui.html
 -------------------------------------------------------------------------------------------
 concepts
 1. batch started on server start : unless u give spring.batch.job.enabled = false
 2. A step will run until your ItemReader returns null.
 3. data source needs to be defined with the same prefix
 4. start via API or schedule
+
+TODO:
+1. multi step
+2. reporting and other properties
+3.
